src/parser/gen/DatalogParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.11.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Datalog.g4 by ANTLR 4.11.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.11.1")]
[System.CLSCompliant(false)]
public partial class DatalogParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, VARIABLE=30, STRING=31, 
		NUMBER=32, BYTES=33, PUBLICKEYBYTES=34, BOOLEAN=35, DATE=36, METHOD_INVOCATION=37, 
		NAME=38, WS=39;
	public const int
		RULE_origin_clause = 0, RULE_origin_element = 1, RULE_signature_alg = 2, 
		RULE_authorizer = 3, RULE_authorizer_element = 4, RULE_block = 5, RULE_block_element = 6, 
		RULE_fact = 7, RULE_rule_ = 8, RULE_check = 9, RULE_policy = 10, RULE_rule_body = 11, 
		RULE_rule_body_element = 12, RULE_predicate = 13, RULE_expression = 14, 
		RULE_term = 15, RULE_fact_term = 16, RULE_set_term = 17, RULE_set = 18;
	public static readonly string[] ruleNames = {
		"origin_clause", "origin_element", "signature_alg", "authorizer", "authorizer_element", 
		"block", "block_element", "fact", "rule_", "check", "policy", "rule_body", 
		"rule_body_element", "predicate", "expression", "term", "fact_term", "set_term", 
		"set"
	};

	private static readonly string[] _LiteralNames = {
		null, "'trusting'", "','", "'authority'", "'previous'", "'ed25519'", "';'", 
		"'('", "')'", "'<-'", "'check'", "'if'", "'all'", "'or'", "'allow'", "'deny'", 
		"'!'", "'*'", "'/'", "'+'", "'-'", "'||'", "'&&'", "'>='", "'<='", "'>'", 
		"'<'", "'=='", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "VARIABLE", "STRING", "NUMBER", "BYTES", 
		"PUBLICKEYBYTES", "BOOLEAN", "DATE", "METHOD_INVOCATION", "NAME", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Datalog.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static DatalogParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DatalogParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DatalogParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Origin_clauseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Origin_elementContext[] origin_element() {
			return GetRuleContexts<Origin_elementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Origin_elementContext origin_element(int i) {
			return GetRuleContext<Origin_elementContext>(i);
		}
		public Origin_clauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_origin_clause; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterOrigin_clause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitOrigin_clause(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrigin_clause(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Origin_clauseContext origin_clause() {
		Origin_clauseContext _localctx = new Origin_clauseContext(Context, State);
		EnterRule(_localctx, 0, RULE_origin_clause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38;
			Match(T__0);
			State = 39;
			origin_element();
			State = 44;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1) {
				{
				{
				State = 40;
				Match(T__1);
				State = 41;
				origin_element();
				}
				}
				State = 46;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Origin_elementContext : ParserRuleContext {
		public Origin_elementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_origin_element; } }
	 
		public Origin_elementContext() { }
		public virtual void CopyFrom(Origin_elementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class OriginElementAuthorityContext : Origin_elementContext {
		public OriginElementAuthorityContext(Origin_elementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterOriginElementAuthority(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitOriginElementAuthority(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOriginElementAuthority(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OriginElementPublicKeyContext : Origin_elementContext {
		[System.Diagnostics.DebuggerNonUserCode] public Signature_algContext signature_alg() {
			return GetRuleContext<Signature_algContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PUBLICKEYBYTES() { return GetToken(DatalogParser.PUBLICKEYBYTES, 0); }
		public OriginElementPublicKeyContext(Origin_elementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterOriginElementPublicKey(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitOriginElementPublicKey(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOriginElementPublicKey(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OriginElementPreviousContext : Origin_elementContext {
		public OriginElementPreviousContext(Origin_elementContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterOriginElementPrevious(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitOriginElementPrevious(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOriginElementPrevious(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Origin_elementContext origin_element() {
		Origin_elementContext _localctx = new Origin_elementContext(Context, State);
		EnterRule(_localctx, 2, RULE_origin_element);
		try {
			State = 52;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__2:
				_localctx = new OriginElementAuthorityContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 47;
				Match(T__2);
				}
				break;
			case T__3:
				_localctx = new OriginElementPreviousContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 48;
				Match(T__3);
				}
				break;
			case T__4:
				_localctx = new OriginElementPublicKeyContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 49;
				signature_alg();
				State = 50;
				Match(PUBLICKEYBYTES);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Signature_algContext : ParserRuleContext {
		public Signature_algContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_signature_alg; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterSignature_alg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitSignature_alg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSignature_alg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Signature_algContext signature_alg() {
		Signature_algContext _localctx = new Signature_algContext(Context, State);
		EnterRule(_localctx, 4, RULE_signature_alg);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AuthorizerContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Authorizer_elementContext[] authorizer_element() {
			return GetRuleContexts<Authorizer_elementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Authorizer_elementContext authorizer_element(int i) {
			return GetRuleContext<Authorizer_elementContext>(i);
		}
		public AuthorizerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_authorizer; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterAuthorizer(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitAuthorizer(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAuthorizer(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AuthorizerContext authorizer() {
		AuthorizerContext _localctx = new AuthorizerContext(Context, State);
		EnterRule(_localctx, 6, RULE_authorizer);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 274877957120L) != 0) {
				{
				{
				State = 56;
				authorizer_element();
				}
				}
				State = 61;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Authorizer_elementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PolicyContext policy() {
			return GetRuleContext<PolicyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CheckContext check() {
			return GetRuleContext<CheckContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FactContext fact() {
			return GetRuleContext<FactContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rule_Context rule_() {
			return GetRuleContext<Rule_Context>(0);
		}
		public Authorizer_elementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_authorizer_element; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterAuthorizer_element(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitAuthorizer_element(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAuthorizer_element(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Authorizer_elementContext authorizer_element() {
		Authorizer_elementContext _localctx = new Authorizer_elementContext(Context, State);
		EnterRule(_localctx, 8, RULE_authorizer_element);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 62;
				policy();
				}
				break;
			case 2:
				{
				State = 63;
				check();
				}
				break;
			case 3:
				{
				State = 64;
				fact();
				}
				break;
			case 4:
				{
				State = 65;
				rule_();
				}
				break;
			}
			State = 68;
			Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Block_elementContext[] block_element() {
			return GetRuleContexts<Block_elementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Block_elementContext block_element(int i) {
			return GetRuleContext<Block_elementContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 10, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__9 || _la==NAME) {
				{
				{
				State = 70;
				block_element();
				}
				}
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Block_elementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CheckContext check() {
			return GetRuleContext<CheckContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FactContext fact() {
			return GetRuleContext<FactContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rule_Context rule_() {
			return GetRuleContext<Rule_Context>(0);
		}
		public Block_elementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block_element; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterBlock_element(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitBlock_element(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock_element(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Block_elementContext block_element() {
		Block_elementContext _localctx = new Block_elementContext(Context, State);
		EnterRule(_localctx, 12, RULE_block_element);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 76;
				check();
				}
				break;
			case 2:
				{
				State = 77;
				fact();
				}
				break;
			case 3:
				{
				State = 78;
				rule_();
				}
				break;
			}
			State = 81;
			Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FactContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(DatalogParser.NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Fact_termContext[] fact_term() {
			return GetRuleContexts<Fact_termContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Fact_termContext fact_term(int i) {
			return GetRuleContext<Fact_termContext>(i);
		}
		public FactContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fact; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterFact(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitFact(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFact(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FactContext fact() {
		FactContext _localctx = new FactContext(Context, State);
		EnterRule(_localctx, 14, RULE_fact);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			Match(NAME);
			State = 84;
			Match(T__6);
			State = 85;
			fact_term();
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1) {
				{
				{
				State = 86;
				Match(T__1);
				State = 87;
				fact_term();
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 93;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Rule_Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rule_bodyContext rule_body() {
			return GetRuleContext<Rule_bodyContext>(0);
		}
		public Rule_Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule_; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterRule_(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitRule_(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRule_(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Rule_Context rule_() {
		Rule_Context _localctx = new Rule_Context(Context, State);
		EnterRule(_localctx, 16, RULE_rule_);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			predicate();
			State = 96;
			Match(T__8);
			State = 97;
			rule_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CheckContext : ParserRuleContext {
		public IToken kind;
		[System.Diagnostics.DebuggerNonUserCode] public Rule_bodyContext[] rule_body() {
			return GetRuleContexts<Rule_bodyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rule_bodyContext rule_body(int i) {
			return GetRuleContext<Rule_bodyContext>(i);
		}
		public CheckContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_check; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterCheck(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitCheck(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCheck(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CheckContext check() {
		CheckContext _localctx = new CheckContext(Context, State);
		EnterRule(_localctx, 18, RULE_check);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			Match(T__9);
			State = 100;
			_localctx.kind = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==T__10 || _la==T__11) ) {
				_localctx.kind = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 101;
			rule_body();
			State = 106;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__12) {
				{
				{
				State = 102;
				Match(T__12);
				State = 103;
				rule_body();
				}
				}
				State = 108;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PolicyContext : ParserRuleContext {
		public IToken kind;
		[System.Diagnostics.DebuggerNonUserCode] public Rule_bodyContext[] rule_body() {
			return GetRuleContexts<Rule_bodyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Rule_bodyContext rule_body(int i) {
			return GetRuleContext<Rule_bodyContext>(i);
		}
		public PolicyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_policy; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.EnterPolicy(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDatalogListener typedListener = listener as IDatalogListener;
			if (typedListener != null) typedListener.ExitPolicy(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDatalogVisitor<TResult> typedVisitor = visitor as IDatalogVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPolicy(this);
			else return visitor.VisitChildren(this);
		}
	}
